option java_package = "gr.uoa.di.containermigrator.worker.communication.protocol";

message AdminMessage {

    enum Type {
        START = 0;
        MIGRATE = 1;
        LIST = 2;
    }

    message Start {

        required string container = 1;

    }

    message Migrate {

        required string source = 1;

        required string target = 2;

        required string container = 3;

    }

    message List {

        required string container = 1;

    }

    required Type type = 1;

    optional Start start = 2;

    optional Migrate migrate = 3;

    optional List list = 4;
}

message AdminResponse {

    enum Type {
        OK = 0;
        WARNING = 1;
        ERROR = 2;
    }

    required Type type = 1;

    optional string payload = 2;
}

message Message {

    enum Type {
        PREP_FOR_MIGRATION = 0;
        WARM_UP = 1;
        MEMORY_DATA = 2;
    }

    message WarmUp {

        required string image = 1;

    }

    message PrepForMigration {

        required string image = 1;

        required string tag = 2;

        required string originalContainer = 3;

        optional bool tcpEstablished = 5;

        // TODO put other restore props too
    }

    message MemoryData {

        required string originalContainer = 1;

        required string originalIPAddress = 2;  // After restore container has the same IP, although docker says otherwisw

        required int32 originalPort = 3;

        required bytes data = 4;

        optional bytes volumeData = 5;

    }

    required Type type = 1;

    optional PrepForMigration prepForMigration = 2;

    optional WarmUp warmUp = 3;

    optional MemoryData memoryData = 4;
}

message Response {

    enum Type {
        OK = 0;
        WARNING = 1;
        ERROR = 2;
    }

    required Type type = 1;

    optional string payload = 2;
}